--- a/Pos-Spring-main/Front_End/index.html
+++ b/Pos-Spring-main/Front_End/index.html
@@ -9,80 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
 
   <style>
-    /*body{*/
-    /*  margin:0;*/
-    /*  height:100vh;*/
-    /*  display:flex;*/
-    /*  justify-content:center;*/
-    /*  align-items:center;*/
-    /*  background: radial-gradient(circle at top left,#0f2027,#020407);*/
-    /*  font-family:"Segoe UI",sans-serif;*/
-    /*  color:white;*/
-    /*}*/
 
-    /*!* ===== Login Card ===== *!*/
-    /*.login-card{*/
-    /*  width:100%;*/
-    /*  max-width:520px;*/
-    /*  padding:50px 40px;*/
-    /*  border-radius:22px;*/
-    /*  background:rgba(10,15,25,0.92);*/
-    /*  box-shadow:0 0 60px rgba(0,195,255,0.35);*/
-    /*  border:2px solid rgba(0,195,255,0.45);*/
-    /*  backdrop-filter:blur(12px);*/
-    /*}*/
-
-    /*!* ===== Title ===== *!*/
-    /*.login-card h2{*/
-    /*  text-align:center;*/
-    /*  font-size:2.4rem;*/
-    /*  margin-bottom:35px;*/
-    /*  color:#4fd1ff;*/
-    /*  text-shadow:0 0 12px rgba(79,209,255,0.7);*/
-    /*}*/
-
-    /*!* ===== Inputs ===== *!*/
-    /*.form-control{*/
-    /*  border-radius:35px;*/
-    /*  padding:16px 24px;*/
-    /*  font-size:1.15rem;*/
-    /*  background:#0b1624;*/
-    /*  border:2px solid #00c3ff55;*/
-    /*  color:white;*/
-    /*}*/
-
-    /*.form-control:focus{*/
-    /*  background:#0b1624;*/
-    /*  border-color:#00c3ff;*/
-    /*  box-shadow:0 0 12px rgba(0,195,255,0.7);*/
-    /*  color:white;*/
-    /*}*/
-
-    /*!* ===== Button ===== *!*/
-    /*.btn-login{*/
-    /*  border-radius:35px;*/
-    /*  padding:16px;*/
-    /*  font-size:1.2rem;*/
-    /*  font-weight:700;*/
-    /*  background:linear-gradient(135deg,#00c3ff,#0066ff);*/
-    /*  border:none;*/
-    /*  margin-top:15px;*/
-    /*}*/
-
-    /*.btn-login:hover{*/
-    /*  transform:scale(1.05);*/
-    /*  box-shadow:0 0 18px rgba(0,195,255,0.9);*/
-    /*}*/
-
-    /*!* ===== Footer ===== *!*/
-    /*.footer-text{*/
-    /*  text-align:center;*/
-    /*  margin-top:25px;*/
-    /*  font-size:15px;*/
-    /*  opacity:0.8;*/
-    /*}*/
-
-    /* -------------------- Body -------------------- */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #0c1524, #1a2a4a);
@@ -94,9 +21,9 @@
       color: #e0e0e0;
     }
 
-    /* -------------------- Login Card -------------------- */
+
     .login-card {
-      background: rgba(12, 21, 36, 0.85); /* frosted-glass effect */
+      background: rgba(12, 21, 36, 0.85);
       backdrop-filter: blur(8px);
       padding: 2.5rem 2rem;
       border-radius: 20px;
@@ -105,13 +32,13 @@
       text-align: center;
     }
 
-    /* Card Header */
+
     .login-card h2 {
       margin-bottom: 2rem;
       color: #a8c0ff;
     }
 
-    /* -------------------- Form Groups -------------------- */
+
     .form-group {
       margin-bottom: 1.5rem;
     }
@@ -134,7 +61,7 @@
       box-shadow: 0 0 8px rgba(76, 175, 80, 0.5);
     }
 
-    /* -------------------- Button -------------------- */
+
     .btn-login {
       width: 100%;
       padding: 0.7rem 1rem;
@@ -153,7 +80,7 @@
       box-shadow: 0 4px 12px rgba(76, 175, 80, 0.6);
     }
 
-    /* Optional: make password input slightly masked with a blur */
+
     .form-control[type="password"] {
       letter-spacing: 0.2rem;
     }
